changes in header

--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,6 @@ body.menu-open {
   max-width: 81.25rem;
 }
 .header__body {
-  padding: 1.25rem;
   gap: 0.9375rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -197,6 +196,28 @@ body.menu-open {
           justify-content: space-between;
   background-color: #fff;
   border-radius: 1.25rem 0 1.25rem 0;
+}
+@media (min-width: 75em) {
+  .header__body {
+    padding: 1.25rem;
+  }
+}
+@media (min-width: 20em) and (max-width: 75em) {
+  @supports (padding: clamp( 0.625rem , 0.3977272727rem  +  1.1363636364vw , 1.25rem )) {
+    .header__body {
+      padding: clamp( 0.625rem , 0.3977272727rem  +  1.1363636364vw , 1.25rem );
+    }
+  }
+  @supports not (padding: clamp( 0.625rem , 0.3977272727rem  +  1.1363636364vw , 1.25rem )) {
+    .header__body {
+      padding: calc(0.625rem + 0.625 * (100vw - 20rem) / 55);
+    }
+  }
+}
+@media (max-width: 20em) {
+  .header__body {
+    padding: 0.625rem;
+  }
 }
 .header__logo {
   z-index: 20;
