--- a/css/style.css
+++ b/css/style.css
@@ -321,6 +321,9 @@ body.menu-open {
             column-gap: 0.625rem;
   }
 }
+.menu__list:not(:last-child) {
+  margin-bottom: 1.25rem;
+}
 @media (max-width: 71.875em) {
   .menu__list {
     -webkit-box-orient: vertical;
@@ -426,6 +429,9 @@ body.menu-open {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   gap: 0.5rem;
 }
 @media (min-width: 75em) {
